--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		<script type="text/javascript" src="js/gamepad.js"></script>
 
 		<script type="text/javascript" src="js/osv.js"></script>
+		<script type="text/javascript" src="js/webspeechkit.min.js"></script>
+		<script type="text/javascript" src="js/teleportr.js"></script>
 	</head>
 	<body>
 		<div id="viewer" ></div>
