--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="mapcontainer" id="mapcontainer">
 				<div class="map" id="map"></div>
 				<input class="mapsearch" id="mapsearch" placeholder="Search" type="text"/>
-				<div class="mapprogress"></div>
+				<!--<div class="mapprogress"></div>-->
 			</div>
 			<div class="settings" id="settings">
 				<h2>Settings</h2>
